package NYT.NCrypto.NProto;

option python_package = "yt_proto.yt.core.crypto.proto";

////////////////////////////////////////////////////////////////////////////////

message TMD5Hasher
{
    required bytes state = 1;
}

////////////////////////////////////////////////////////////////////////////////
